--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/artemij-petrovskij/cashkpr#readme",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.1",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
